<resources>
    <string name="app_name">Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="submit">Submit</string>
</resources>